tests/error/label_not_defined1.gw
#! [contains] used but not defined
goto test;
